David: minimize diffs for runtime/ErrorHandling/TestVMConfigInHsErrFile.java